--- a/contact.html
+++ b/contact.html
@@ -53,35 +53,35 @@ permalink: /contact/
           <h2>Stop By For A visit</h2>
           <ul class="address-block">
             <li>
-              <i class="fa fa-map-marker"></i>North Main Street,Brooklyn Australia
+              <i class="fa fa-map-marker"></i>Shwabska 66/3 Street,Uzhhorod Ukraine
             </li>
             <li>
-              <i class="fa fa-envelope-o"></i>Email: contact@mail.com
+              <i class="fa fa-envelope-o"></i>Email: info@holisticda.com
             </li>
             <li>
-              <i class="fa fa-phone"></i>Phone:+88 01672 506 744
+              <i class="fa fa-phone"></i>Phone:+38 0663 296 387
             </li>
           </ul>
 
           <ul class="social-icons">
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-google"></i></a>
-            </li>
+            <!--<li>-->
+              <!--<a href="http://www.themefisher.com"><i class="fa fa-google"></i></a>-->
+            <!--</li>-->
             <li>
               <a href="http://www.themefisher.com"><i class="fa fa-linkedin"></i></a>
             </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-pinterest"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-dribbble"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-behance"></i></a>
-            </li>
-            <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-twitter"></i></a>
-            </li>
+            <!--<li>-->
+              <!--<a href="http://www.themefisher.com"><i class="fa fa-pinterest"></i></a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="http://www.themefisher.com"><i class="fa fa-dribbble"></i></a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="http://www.themefisher.com"><i class="fa fa-behance"></i></a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="http://www.themefisher.com"><i class="fa fa-twitter"></i></a>-->
+            <!--</li>-->
             <li>
               <a href="http://www.themefisher.com"><i class="fa fa-facebook"></i></a>
             </li>
