--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ permalink: /
                     <h1 class="animated fadeInUp">HOLISTIC <br> DEVELOPMENT AGENCY</h1>
                     <p class="animated fadeInUp">We love the AR/VR and the work we do. We work
                         closely with our clients to deliver the best possible AR/VR solutions for
-                        their needs</p>
+                        their needs. </p>
+                    <p>But it's absolutely unrelated to our web development skills, it's not about
+                        about our team :)</p>
                 </div>
             </div>
         </div>
@@ -29,12 +31,8 @@ permalink: /
                         <h2>About Us</h2>
                         <p>Here to connect!</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt mollit anim id </p>
+                    <p>Lorem ipsum dolor sit amet...</p>
+                    <p>As you see we still under development process of our web part </p>
                 </div>
             </div><!-- .col-md-7 close -->
             <div class="col-md-5 col-sm-12">
@@ -51,9 +49,7 @@ permalink: /
         <div class="row">
             <div class="col-md-6 col-md-offset-6">
                 <h2>WE BELIEVE IN GREAT IDEAS</h2>
-                <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac,
-                    vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                    condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p>And this is to still not finished part of site</p>
                 <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac,
                     vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                     condimentum nibh, ut fermentum massa justo sit amet risus.</p>
@@ -72,76 +68,75 @@ permalink: /
         <div class="row">
             <div class="section-title">
                 <h2>Our Services</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                    Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-                    right at the coast of the Semantics</p>
+                <p> Yap! We know, we need more work on site. will do this imidiatly after finishing
+                    this cup of coffee!</p>
             </div>
         </div>
         <div class="row ">
-            <div class="col-sm-6 col-md-3">
+            <div class="container">
                 <div class="service-item">
                     <i class="icon ion-coffee"></i>
-                    <h4>Branding</h4>
+                    <h4>Coffee time!</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                         tempor incididunt ut </p>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="service-item">
-                    <i class="ion-compass"></i>
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut </p>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="service-item">
-                    <i class="ion-image"></i>
-                    <h4>App Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut </p>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="service-item">
-                    <i class="ion-bug"></i>
-                    <h4>Start Up</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut </p>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="service-item">
-                    <i class="ion-headphone"></i>
-                    <h4>Logo Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut </p>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="service-item">
-                    <i class="ion-leaf"></i>
-                    <h4>Development</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut </p>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="service-item">
-                    <i class="ion-planet"></i>
-                    <h4>Brand Identity</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut </p>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="service-item">
-                    <i class="ion-earth"></i>
-                    <h4>Brand Identity</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut </p>
-                </div>
-            </div>
+            <!--<div class="col-sm-6 col-md-3">-->
+            <!--<div class="service-item">-->
+            <!--<i class="ion-compass"></i>-->
+            <!--<h4>Web Design</h4>-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
+            <!--tempor incididunt ut </p>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-sm-6 col-md-3">-->
+            <!--<div class="service-item">-->
+            <!--<i class="ion-image"></i>-->
+            <!--<h4>App Design</h4>-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
+            <!--tempor incididunt ut </p>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-sm-6 col-md-3">-->
+            <!--<div class="service-item">-->
+            <!--<i class="ion-bug"></i>-->
+            <!--<h4>Start Up</h4>-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
+            <!--tempor incididunt ut </p>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-sm-6 col-md-3">-->
+            <!--<div class="service-item">-->
+            <!--<i class="ion-headphone"></i>-->
+            <!--<h4>Logo Design</h4>-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
+            <!--tempor incididunt ut </p>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-sm-6 col-md-3">-->
+            <!--<div class="service-item">-->
+            <!--<i class="ion-leaf"></i>-->
+            <!--<h4>Development</h4>-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
+            <!--tempor incididunt ut </p>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-sm-6 col-md-3">-->
+            <!--<div class="service-item">-->
+            <!--<i class="ion-planet"></i>-->
+            <!--<h4>Brand Identity</h4>-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
+            <!--tempor incididunt ut </p>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-sm-6 col-md-3">-->
+            <!--<div class="service-item">-->
+            <!--<i class="ion-earth"></i>-->
+            <!--<h4>Brand Identity</h4>-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod-->
+            <!--tempor incididunt ut </p>-->
+            <!--</div>-->
+            <!--</div>-->
         </div>
     </div>
 </section>
