Work under work

--- a/work.html
+++ b/work.html
@@ -4,180 +4,297 @@ title: Our Work
 permalink: /work/
 ---
 
-    <!-- Slider Start -->
+<!-- Slider Start -->
 <section id="global-header">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
                     <h1>Just some of our latest projects.</h1>
-                    <p>Don’t just take our word for it. Check out some of our latest work.</p>
+                    <p>Don’t just take our word for it.Drink cup of coffee before it :) </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-    <!-- Portfolio Start -->
-<section id="portfolio-work">
+<!-- Call to action Start -->
+
+<!--<section id="call-to-action">-->
+<!--<div class="container">-->
+<!--<div class="row">-->
+<!--<div class="col-md-12">-->
+<!--<div class="block">-->
+<!--<h2>We design delightful digital experiences.</h2>-->
+<!--<p>Read more about what we do and our philosophy of design. Judge for yourself The work-->
+<!--and results we’ve achieved for other clients, and meet our highly experienced Team who-->
+<!--just love to design.</p>-->
+<!--<a class="btn btn-default btn-call-to-action" href="#">Tell Us Your Story</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</section>-->
+
+<!--Content Start-->
+
+<section id="intro">
+
     <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="block">
-              <div class="portfolio-menu">
-                <ul>
-                    <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
-                    <li class="filter" data-filter=".Video">Video</li>
-                </ul>
-              </div>
-              <div class="portfolio-contant">
-                <ul id="portfolio-contant-active">
-                    <li class="mix Branding">
-                      <a href="#">
-                        <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
-                        <div class="overly">
-                          <div class="position-center">
-                            <h2>Tesla Motors</h2>
-                            <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                          </div>
+        <div class="container-work">
+            <div class="row">
+                <div class="col-md-7 col-sm-12">
+                    <div class="block">
+                        <div class="section-title">
+                            <h2>tARdis-X</h2>
+                            <p>Here to connect!</p>
                         </div>
-                      </a>
-                  </li>
-                  <li class="mix Websites">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                        <p>2 year of living with this idea, 7 month of development. and now "Hi is a live!". So in fev words tARdis-x = This AR disrupt X of your conference problem</p>
+                        <p>As you see we still under development process of our web part </p>
+                    </div>
+                </div><!-- .col-md-7 close -->
+                <div class="col-md-5 col-sm-12">
+                    <div class="block">
+                        <img src="{{ site.baseurl }}/img/holistic-logo.png" alt="Img">
+                    </div>
+                </div><!-- .col-md-5 close -->
+                <div >
+                    <div >
+                        <img src="{{ site.baseurl }}/img/buttons/google-play.png" alt="Img" style="height:50px; width:150">
+                        <img src="{{ site.baseurl }}/img/buttons/apple_store.png" alt="Img" style="height:54px; width:150">
+                    </div>
+                    <div >
 
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix Graphic">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                    </div>
+                </div>
 
-                        </div>
-                      </div>
-
-                    </a>
-                  </li>
-                  <li class="mix design">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix Video">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="mix Graphic">
-                    <a href="#">
-                      <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
-                      <div class="overly">
-                        <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </div>
             </div>
-          </div>
+            <div class="orangeline"></div>
+        </div>
+
+    </div>
+
+
+    <div class="container">
+        <div class="container-work">
+            <div class="row">
+                <div class="col-md-5 col-sm-12">
+                    <div class="block" style="position:center">
+                        <img src="{{ site.baseurl }}/img/devFest.png" alt="Img">
+                    </div>
+                </div><!-- .col-md-5 close -->
+                <div class="col-md-7 col-sm-12">
+                    <div class="block">
+                        <div class="section-title">
+                            <h2>DevFestUA 2018</h2>
+                            <p>Here to connect!</p>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet...</p>
+                        <p>As you see we still under development process of our web part </p>
+                    </div>
+                </div><!-- .col-md-7 close -->
+
+            </div>
+            <div class="orangeline"></div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="container-work">
+            <div class="row">
+                <div class="col-md-7 col-sm-12">
+                    <div class="block">
+                        <div class="section-title">
+                            <h2>Borodar Assets</h2>
+                            <p>Yap, we know we are not Borodar but ut was not always.</p>
+                        </div>
+                        <p>Along long time ago, we work together...</p>
+                        <p>And now we work separate, so we work on development and support this
+                            awesome
+                            set of assets, and we use them for work for free, THX Ivan. </p>
+                        <p>If you don't believe me, go and ask <a href="http://borodar.com"
+                                                                  target="_blank">Borodar</a></p>
+
+                    </div>
+                </div><!-- .col-md-7 close -->
+                <div class="col-md-5 col-sm-12">
+                    <div class="block">
+                        <img src="{{ site.baseurl }}/img/borodar-assets.png" alt="Img">
+                    </div>
+                </div><!-- .col-md-5 close -->
+
+            </div>
+            <div class="orangeline"></div>
+        </div>
+    </div>
+
 </section>
+
+
+<!--&lt;!&ndash; Portfolio Start &ndash;&gt;-->
+<!--<section id="portfolio-work">-->
+<!--<div class="container">-->
+<!--<div class="row">-->
+<!--<div class="col-md-12">-->
+<!--<div class="block">-->
+<!--<div class="portfolio-menu">-->
+<!--<ul>-->
+<!--<li class="filter" data-filter="all">Everything</li>-->
+<!--<li class="filter" data-filter=".Branding">Branding</li>-->
+<!--<li class="filter" data-filter=".Websites">Websites</li>-->
+<!--<li class="filter" data-filter=".Graphic">Graphic</li>-->
+<!--<li class="filter" data-filter=".design">design</li>-->
+<!--<li class="filter" data-filter=".Video">Video</li>-->
+<!--</ul>-->
+<!--</div>-->
+<!--<div class="portfolio-contant">-->
+<!--<ul id="portfolio-contant-active">-->
+<!--<li class="mix Branding">-->
+<!--<a href="http://tardis-x.holisticda.com/" target="_blank">-->
+<!--<img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">-->
+<!--<div class="overly">-->
+<!--<div class="position-center">-->
+<!--<h2>tARdis-X</h2>-->
+<!--<p>This AR disrupt X of your conference problem</p>-->
+
+<!--</div>-->
+<!--</div>-->
+<!--</a>-->
+<!--</li>-->
+<!--<li class="mix Websites">-->
+<!--<a href="#">-->
+<!--<img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">-->
+<!--<div class="overly">-->
+<!--<div class="position-center">-->
+<!--<h2>Tesla Motors</h2>-->
+<!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
+
+<!--</div>-->
+<!--</div>-->
+<!--</a>-->
+<!--</li>-->
+<!--<li class="mix Graphic">-->
+<!--<a href="#">-->
+<!--<img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">-->
+<!--<div class="overly">-->
+<!--<div class="position-center">-->
+<!--<h2>Tesla Motors</h2>-->
+<!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
+
+<!--</div>-->
+<!--</div>-->
+
+<!--</a>-->
+<!--</li>-->
+<!--<li class="mix design">-->
+<!--<a href="#">-->
+<!--<img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">-->
+<!--<div class="overly">-->
+<!--<div class="position-center">-->
+<!--<h2>Tesla Motors</h2>-->
+<!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
+
+<!--</div>-->
+<!--</div>-->
+<!--</a>-->
+<!--</li>-->
+<!--<li class="mix Video">-->
+<!--<a href="#">-->
+<!--<img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">-->
+<!--<div class="overly">-->
+<!--<div class="position-center">-->
+<!--<h2>Tesla Motors</h2>-->
+<!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
+
+<!--</div>-->
+<!--</div>-->
+<!--</a>-->
+<!--</li>-->
+<!--<li class="mix Graphic">-->
+<!--<a href="#">-->
+<!--<img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">-->
+<!--<div class="overly">-->
+<!--<div class="position-center">-->
+<!--<h2>Tesla Motors</h2>-->
+<!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
+
+<!--</div>-->
+<!--</div>-->
+<!--</a>-->
+<!--</li>-->
+<!--</ul>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</section>-->
 
 <!-- Clients Logo Section Start -->
 <section id="clients-logo-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <div id="clients-logo" class="owl-carousel">
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
+    <div class="container">
+        <div class="row">
+            <div style="gravity:center"><h2>Partners and Customers</h2></div>
+            <div class="col-md-12">
+                <div class="block">
+                    <div id="clients-logo" class="owl-carousel">
+                        <div class="clients-logo-img">
+                            <img src="{{ site.baseurl }}/img/clients/clients-borodar.png"
+                                 alt="Features">
+                        </div>
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">-->
+                        <!--</div>-->
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">-->
+                        <!--</div>-->
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">-->
+                        <!--</div>-->
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">-->
+                        <!--</div>-->
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">-->
+                        <!--</div>-->
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">-->
+                        <!--</div>-->
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">-->
+                        <!--</div>-->
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">-->
+                        <!--</div>-->
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">-->
+                        <!--</div>-->
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">-->
+                        <!--</div>-->
+                        <!--<div class="clients-logo-img">-->
+                        <!--<img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">-->
+                        <!--</div>-->
+                    </div>
+                </div>
             </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo2.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo1.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo4.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo5.png" alt="Features">
-            </div>
-            <div class="clients-logo-img">
-              <img src="{{ site.baseurl }}/img/clients/clients-logo3.png" alt="Features">
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </section>
 
 
 <!-- Call to action Start -->
-<section id="call-to-action">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<!--<section id="call-to-action">-->
+<!--<div class="container">-->
+<!--<div class="row">-->
+<!--<div class="col-md-12">-->
+<!--<div class="block">-->
+<!--<h2>We design delightful digital experiences.</h2>-->
+<!--<p>Read more about what we do and our philosophy of design. Judge for yourself-->
+<!--The work and results we’ve achieved for other clients, and meet our highly-->
+<!--experienced Team who just love to design.</p>-->
+<!--<a class="btn btn-default btn-call-to-action" href="#">Tell Us Your Story</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</section>-->
