--- a/work.html
+++ b/work.html
@@ -59,8 +59,8 @@ permalink: /work/
                 </div><!-- .col-md-5 close -->
                 <div >
                     <div >
-                        <img src="{{ site.baseurl }}/img/buttons/google-play.png" alt="Img" style="height:50px; width:150">
-                        <img src="{{ site.baseurl }}/img/buttons/apple_store.png" alt="Img" style="height:54px; width:150">
+                        <a href="https://play.google.com/store/apps/details?id=com.holisticda.tardisx" target="_blank"><img src="{{ site.baseurl }}/img/buttons/google-play.png" alt="Img" style="height:50px; width:150"></a>
+                        <!--<img src="{{ site.baseurl }}/img/buttons/apple_store.png" alt="Img" style="height:54px; width:150">-->
                     </div>
                     <div >
 
@@ -92,7 +92,15 @@ permalink: /work/
                         <p>As you see we still under development process of our web part </p>
                     </div>
                 </div><!-- .col-md-7 close -->
+                <div >
+                    <div >
+                        <a href="https://play.google.com/store/apps/details?id=ua.org.gdg.devfest2018" target="_blank"><img src="{{ site.baseurl }}/img/buttons/google-play.png" alt="Img" style="height:50px; width:150"></a>
+                        <a href="https://itunes.apple.com/us/app/devfest-ukraine-2018/id1436409628?mt=8" target="_blank"><img src="{{ site.baseurl }}/img/buttons/apple_store.png" alt="Img" style="height:54px; width:150"></a>
+                    </div>
+                    <div >
 
+                    </div>
+                </div>
             </div>
             <div class="orangeline"></div>
         </div>
