--- a/work.html
+++ b/work.html
@@ -48,26 +48,32 @@ permalink: /work/
                             <h2>tARdis-X</h2>
                             <p>Here to connect!</p>
                         </div>
-                        <p>2 year of living with this idea, 7 month of development. and now "Hi is a live!". So in fev words tARdis-x = This AR disrupt X of your conference problem</p>
+                        <p>2 year of living with this idea, 7 month of development. and now "Hi is a
+                            live!". So in fev words tARdis-x = This AR disrupt X of your conference
+                            problem</p>
                         <p>As you see we still under development process of our web part </p>
                     </div>
                 </div><!-- .col-md-7 close -->
                 <div class="col-md-5 col-sm-12">
                     <div class="block">
-                        <img src="{{ site.baseurl }}/img/holistic-logo.png" alt="Img">
+                        <img src="{{ site.baseurl }}/img/portfolio/holistic-logo.png" alt="Img">
                     </div>
                 </div><!-- .col-md-5 close -->
-                <div >
-                    <div >
-                        <a href="https://play.google.com/store/apps/details?id=com.holisticda.tardisx" target="_blank"><img src="{{ site.baseurl }}/img/buttons/google-play.png" alt="Img" style="height:50px; width:150"></a>
-                        <!--<img src="{{ site.baseurl }}/img/buttons/apple_store.png" alt="Img" style="height:54px; width:150">-->
-                    </div>
-                    <div >
-
-                    </div>
-                </div>
 
             </div>
+            <div>
+                <div>
+                    <a href="https://play.google.com/store/apps/details?id=com.holisticda.tardisx"
+                       target="_blank"><img src="{{ site.baseurl }}/img/buttons/google-play.png"
+                                            alt="Img" style="height:50px; width:150"></a>
+                    <a href="https://tardis-x.holisticda.com"
+                       target="_blank"> <img src="{{ site.baseurl }}/img/buttons/demovideo_watch.png" alt="Img" style="height:54px; width:150"></a>
+                </div>
+                <div>
+
+                </div>
+            </div>
+
             <div class="orangeline"></div>
         </div>
 
@@ -76,32 +82,40 @@ permalink: /work/
 
     <div class="container">
         <div class="container-work">
-            <div class="row">
-                <div class="col-md-5 col-sm-12">
-                    <div class="block" style="position:center">
-                        <img src="{{ site.baseurl }}/img/devFest.png" alt="Img">
-                    </div>
-                </div><!-- .col-md-5 close -->
-                <div class="col-md-7 col-sm-12">
-                    <div class="block">
-                        <div class="section-title">
-                            <h2>DevFestUA 2018</h2>
-                            <p>Here to connect!</p>
+            <div>
+                <div class="row">
+                    <div class="col-md-5 col-sm-12">
+                        <div class="block" style="position:center">
+                            <img src="{{ site.baseurl }}/img/portfolio/devFest.png" alt="Img">
                         </div>
-                        <p>Lorem ipsum dolor sit amet...</p>
-                        <p>As you see we still under development process of our web part </p>
-                    </div>
-                </div><!-- .col-md-7 close -->
-                <div >
-                    <div >
-                        <a href="https://play.google.com/store/apps/details?id=ua.org.gdg.devfest2018" target="_blank"><img src="{{ site.baseurl }}/img/buttons/google-play.png" alt="Img" style="height:50px; width:150"></a>
-                        <a href="https://itunes.apple.com/us/app/devfest-ukraine-2018/id1436409628?mt=8" target="_blank"><img src="{{ site.baseurl }}/img/buttons/apple_store.png" alt="Img" style="height:54px; width:150"></a>
-                    </div>
-                    <div >
+                    </div><!-- .col-md-5 close -->
+                    <div class="col-md-7 col-sm-12">
+                        <div class="block">
+                            <div class="section-title">
+                                <h2>DevFestUA 2018</h2>
+                                <p>Here to connect!</p>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet...</p>
+                            <p>As you see we still under development process of our web part </p>
+                        </div>
+                    </div><!-- .col-md-7 close -->
+                    <div style="float: right">
+                        <div>
+                            <a href="https://play.google.com/store/apps/details?id=ua.org.gdg.devfest2018"
+                               target="_blank"><img src="{{ site.baseurl }}/img/buttons/google-play.png"
+                                                    alt="Img" style="height:50px; width:150"></a>
+                            <a href="https://itunes.apple.com/us/app/devfest-ukraine-2018/id1436409628?mt=8"
+                               target="_blank"><img src="{{ site.baseurl }}/img/buttons/apple_store.png"
+                                                    alt="Img" style="height:54px; width:150"></a>
+                        </div>
+                        <div>
 
+                        </div>
                     </div>
                 </div>
+
             </div>
+
             <div class="orangeline"></div>
         </div>
     </div>
@@ -126,7 +140,7 @@ permalink: /work/
                 </div><!-- .col-md-7 close -->
                 <div class="col-md-5 col-sm-12">
                     <div class="block">
-                        <img src="{{ site.baseurl }}/img/borodar-assets.png" alt="Img">
+                        <img src="{{ site.baseurl }}/img/portfolio/borodar-assets.png" alt="Img">
                     </div>
                 </div><!-- .col-md-5 close -->
 
