--- a/work.html
+++ b/work.html
@@ -46,12 +46,14 @@ permalink: /work/
                     <div class="block">
                         <div class="section-title">
                             <h2>tARdis-X</h2>
-                            <p>Here to connect!</p>
+                            <p><mark style="color:#009999; background: none;">T</mark>his <mark style="color:#009999; background: none;">AR</mark> <mark style="color:#009999; background: none;">dis</mark>rupt <mark style="color:#009999; background: none;">X</mark> of your conference problem</p>
                         </div>
                         <p>2 year of living with this idea, 7 month of development. and now "Hi is a
                             live!". So in fev words tARdis-x = This AR disrupt X of your conference
                             problem</p>
-                        <p>As you see we still under development process of our web part </p>
+                        <h4>Tech Stack: </h4>
+                        Unity, AR Core, AR Kit, Vuforia, Android, iOS, Google+ Authorization, Facebook Authorization, FireBase, <a href="https://www.getsocial.im/" target="_blank">GetSocial</a>, <a href="https://github.com/gdg-x/hoverboard" >Hoverboard</a>
+
                     </div>
                 </div><!-- .col-md-7 close -->
                 <div class="col-md-5 col-sm-12">
@@ -92,11 +94,12 @@ permalink: /work/
                     <div class="col-md-7 col-sm-12">
                         <div class="block">
                             <div class="section-title">
-                                <h2>DevFestUA 2018</h2>
-                                <p>Here to connect!</p>
+                                <h2>#DevFestUA 2018</h2>
+                                <p>NOT AN ORDINARY TECH CONFERENCE</p>
                             </div>
-                            <p>Lorem ipsum dolor sit amet...</p>
-                            <p>As you see we still under development process of our web part </p>
+                            <p>DevFest Ukraine 2018 official app. Schedule, AR map, quest and news feed, all in one place.</p>
+                            <h4>Tech Stack: </h4>
+                            Unity, AR Core, AR Kit, Vuforia, Android, iOS, Google+ Authorization, Facebook Authorization, FireBase, <a href="https://www.getsocial.im/" target="_blank">GetSocial</a>, <a href="https://github.com/gdg-x/hoverboard" >Hoverboard</a>
                         </div>
                     </div><!-- .col-md-7 close -->
                     <div style="float: right">
@@ -129,13 +132,14 @@ permalink: /work/
                             <h2>Borodar Assets</h2>
                             <p>Yap, we know we are not Borodar but ut was not always.</p>
                         </div>
-                        <p>Along long time ago, we work together...</p>
+                        Along long time ago, we work together...
                         <p>And now we work separate, so we work on development and support this
                             awesome
                             set of assets, and we use them for work for free, THX Ivan. </p>
                         <p>If you don't believe me, go and ask <a href="http://borodar.com"
                                                                   target="_blank">Borodar</a></p>
-
+                        <h4>Tech Stack: </h4>
+                        Unity, Unity Editor,
                     </div>
                 </div><!-- .col-md-7 close -->
                 <div class="col-md-5 col-sm-12">
@@ -144,6 +148,16 @@ permalink: /work/
                     </div>
                 </div><!-- .col-md-5 close -->
 
+            </div>
+            <div>
+                <div>
+
+                    <a href="https://assetstore.unity.com/publishers/17890"
+                       target="_blank"> <img src="{{ site.baseurl }}/img/buttons/asset_unity.png" alt="Img" style="height:54px; width:150"></a>
+                </div>
+                <div>
+
+                </div>
             </div>
             <div class="orangeline"></div>
         </div>
