--- a/work.html
+++ b/work.html
@@ -10,31 +10,13 @@ permalink: /work/
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h1>Just some of our latest projects.</h1>
-                    <p>Don’t just take our word for it.Drink cup of coffee before it :) </p>
+                    <h1>Just some of our latest projects</h1>
+                    <p>Don’t just take our word for it. Take some whisky and review them:) </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- Call to action Start -->
-
-<!--<section id="call-to-action">-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-md-12">-->
-<!--<div class="block">-->
-<!--<h2>We design delightful digital experiences.</h2>-->
-<!--<p>Read more about what we do and our philosophy of design. Judge for yourself The work-->
-<!--and results we’ve achieved for other clients, and meet our highly experienced Team who-->
-<!--just love to design.</p>-->
-<!--<a class="btn btn-default btn-call-to-action" href="#">Tell Us Your Story</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</section>-->
-
 <!--Content Start-->
 
 <section id="intro">
@@ -46,13 +28,24 @@ permalink: /work/
                     <div class="block">
                         <div class="section-title">
                             <h2>tARdis-X</h2>
-                            <p><mark style="color:#009999; background: none;">T</mark>his <mark style="color:#009999; background: none;">AR</mark> <mark style="color:#009999; background: none;">dis</mark>rupt <mark style="color:#009999; background: none;">X</mark> of your conference problem</p>
+                            <p>
+                                <mark style="color:#009999; background: none;">T</mark>
+                                his
+                                <mark style="color:#009999; background: none;">AR</mark>
+                                <mark style="color:#009999; background: none;">dis</mark>
+                                rupt
+                                <mark style="color:#009999; background: none;">X</mark>
+                                of your conference problem
+                            </p>
                         </div>
                         <p>2 year of living with this idea, 7 month of development. and now "Hi is a
-                            live!". So in fev words tARdis-x = This AR disrupt X of your conference
-                            problem</p>
+                            live!". This is a small idea which must make a life of some people
+                            easy's </p>
                         <h4>Tech Stack: </h4>
-                        Unity, AR Core, AR Kit, Vuforia, Android, iOS, Google+ Authorization, Facebook Authorization, FireBase, <a href="https://www.getsocial.im/" target="_blank">GetSocial</a>, <a href="https://github.com/gdg-x/hoverboard" >Hoverboard</a>
+                        Unity, AR Core, AR Kit, Vuforia, Android, iOS, Google+ Authorization,
+                        Facebook Authorization, FireBase, <a href="https://www.getsocial.im/"
+                                                             target="_blank">GetSocial</a>, <a
+                            href="https://github.com/gdg-x/hoverboard">Hoverboard</a>
 
                     </div>
                 </div><!-- .col-md-7 close -->
@@ -69,18 +62,18 @@ permalink: /work/
                        target="_blank"><img src="{{ site.baseurl }}/img/buttons/google-play.png"
                                             alt="Img" style="height:50px; width:150"></a>
                     <a href="https://tardis-x.holisticda.com"
-                       target="_blank"> <img src="{{ site.baseurl }}/img/buttons/demovideo_watch.png" alt="Img" style="height:54px; width:150"></a>
+                       target="_blank"> <img
+                            src="{{ site.baseurl }}/img/buttons/demovideo_watch.png" alt="Img"
+                            style="height:54px; width:150"></a>
                 </div>
                 <div>
 
                 </div>
             </div>
-
-            <div class="orangeline"></div>
         </div>
-
     </div>
 
+    <div class="orangeline"></div>
 
     <div class="container">
         <div class="container-work">
@@ -97,32 +90,37 @@ permalink: /work/
                                 <h2>#DevFestUA 2018</h2>
                                 <p>NOT AN ORDINARY TECH CONFERENCE</p>
                             </div>
-                            <p>DevFest Ukraine 2018 official app. Schedule, AR map, quest and news feed, all in one place.</p>
+                            <p>DevFest Ukraine 2018 official app. Schedule, AR map, quest and news
+                                feed, all in one place.</p>
                             <h4>Tech Stack: </h4>
-                            Unity, AR Core, AR Kit, Vuforia, Android, iOS, Google+ Authorization, Facebook Authorization, FireBase, <a href="https://www.getsocial.im/" target="_blank">GetSocial</a>, <a href="https://github.com/gdg-x/hoverboard" >Hoverboard</a>
+                            Unity, AR Core, AR Kit, Vuforia, Android, iOS, Google+ Authorization,
+                            Facebook Authorization, FireBase, <a href="https://www.getsocial.im/"
+                                                                 target="_blank">GetSocial</a>, <a
+                                href="https://github.com/gdg-x/hoverboard">Hoverboard</a>
                         </div>
                     </div><!-- .col-md-7 close -->
-                    <div style="float: right">
-                        <div>
-                            <a href="https://play.google.com/store/apps/details?id=ua.org.gdg.devfest2018"
-                               target="_blank"><img src="{{ site.baseurl }}/img/buttons/google-play.png"
-                                                    alt="Img" style="height:50px; width:150"></a>
-                            <a href="https://itunes.apple.com/us/app/devfest-ukraine-2018/id1436409628?mt=8"
-                               target="_blank"><img src="{{ site.baseurl }}/img/buttons/apple_store.png"
-                                                    alt="Img" style="height:54px; width:150"></a>
-                        </div>
-                        <div>
 
-                        </div>
-                    </div>
                 </div>
 
             </div>
+            <div style="float: right">
+                <div>
+                    <a href="https://play.google.com/store/apps/details?id=ua.org.gdg.devfest2018"
+                       target="_blank"><img
+                            src="{{ site.baseurl }}/img/buttons/google-play.png"
+                            alt="Img" style="height:50px; width:150"></a>
+                    <a href="https://itunes.apple.com/us/app/devfest-ukraine-2018/id1436409628?mt=8"
+                       target="_blank"><img
+                            src="{{ site.baseurl }}/img/buttons/apple_store.png"
+                            alt="Img" style="height:54px; width:150"></a>
+                </div>
+                <div>
 
-            <div class="orangeline"></div>
+                </div>
+            </div>
         </div>
     </div>
-
+    <div class="orangeline"></div>
     <div class="container">
         <div class="container-work">
             <div class="row">
@@ -153,122 +151,67 @@ permalink: /work/
                 <div>
 
                     <a href="https://assetstore.unity.com/publishers/17890"
-                       target="_blank"> <img src="{{ site.baseurl }}/img/buttons/asset_unity.png" alt="Img" style="height:54px; width:150"></a>
+                       target="_blank"> <img src="{{ site.baseurl }}/img/buttons/asset_unity.png"
+                                             alt="Img" style="height:54px; width:150"></a>
                 </div>
                 <div>
 
                 </div>
             </div>
-            <div class="orangeline"></div>
         </div>
     </div>
+    <div class="orangeline"></div>
+    <div class="container">
+        <div class="container-work">
+            <div>
+                <div class="row">
+                    <div class="col-md-5 col-sm-12">
+                        <div class="block" style="position:center">
+                            <img src="{{ site.baseurl }}/img/portfolio/gvax.png" alt="Img">
+                        </div>
+                    </div><!-- .col-md-5 close -->
+                    <div class="col-md-7 col-sm-12">
+                        <div class="block">
+                            <div class="section-title">
+                                <h2>GVAX TV 100% Latino Live-TV</h2>
+                                <p>We working on a real Live-TV experience for you!</p>
+                            </div>
+                            <p> This application is based on our famous ULTIMATE app that has been developed for our ULTIMATE TV-boxes. Enjoy Latin American Live-TV on the big screen or watch on your mobile device while you're on the go!</p>
+                            <h4>Tech Stack: </h4>
+                            Unity,  Android, iOS, Google+ Authorization, Android TV, Apple TV
+                            Facebook Authorization,
+                        </div>
+                    </div><!-- .col-md-7 close -->
 
+                </div>
+
+            </div>
+            <div style="float: right">
+                <div>
+                    <a href="https://play.google.com/store/apps/details?id=com.air.gvax.tv"
+                       target="_blank"><img
+                            src="{{ site.baseurl }}/img/buttons/google-play.png"
+                            alt="Img" style="height:50px; width:150"></a>
+                    <a href="https://itunes.apple.com/ch/app/gvax-tv-air-100-latino/id1435310217"
+                       target="_blank"><img
+                            src="{{ site.baseurl }}/img/buttons/apple_store.png"
+                            alt="Img" style="height:54px; width:150"></a>
+                </div>
+                <div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="orangeline"></div>
 </section>
 
-
-<!--&lt;!&ndash; Portfolio Start &ndash;&gt;-->
-<!--<section id="portfolio-work">-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-md-12">-->
-<!--<div class="block">-->
-<!--<div class="portfolio-menu">-->
-<!--<ul>-->
-<!--<li class="filter" data-filter="all">Everything</li>-->
-<!--<li class="filter" data-filter=".Branding">Branding</li>-->
-<!--<li class="filter" data-filter=".Websites">Websites</li>-->
-<!--<li class="filter" data-filter=".Graphic">Graphic</li>-->
-<!--<li class="filter" data-filter=".design">design</li>-->
-<!--<li class="filter" data-filter=".Video">Video</li>-->
-<!--</ul>-->
-<!--</div>-->
-<!--<div class="portfolio-contant">-->
-<!--<ul id="portfolio-contant-active">-->
-<!--<li class="mix Branding">-->
-<!--<a href="http://tardis-x.holisticda.com/" target="_blank">-->
-<!--<img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">-->
-<!--<div class="overly">-->
-<!--<div class="position-center">-->
-<!--<h2>tARdis-X</h2>-->
-<!--<p>This AR disrupt X of your conference problem</p>-->
-
-<!--</div>-->
-<!--</div>-->
-<!--</a>-->
-<!--</li>-->
-<!--<li class="mix Websites">-->
-<!--<a href="#">-->
-<!--<img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">-->
-<!--<div class="overly">-->
-<!--<div class="position-center">-->
-<!--<h2>Tesla Motors</h2>-->
-<!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
-
-<!--</div>-->
-<!--</div>-->
-<!--</a>-->
-<!--</li>-->
-<!--<li class="mix Graphic">-->
-<!--<a href="#">-->
-<!--<img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">-->
-<!--<div class="overly">-->
-<!--<div class="position-center">-->
-<!--<h2>Tesla Motors</h2>-->
-<!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
-
-<!--</div>-->
-<!--</div>-->
-
-<!--</a>-->
-<!--</li>-->
-<!--<li class="mix design">-->
-<!--<a href="#">-->
-<!--<img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">-->
-<!--<div class="overly">-->
-<!--<div class="position-center">-->
-<!--<h2>Tesla Motors</h2>-->
-<!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
-
-<!--</div>-->
-<!--</div>-->
-<!--</a>-->
-<!--</li>-->
-<!--<li class="mix Video">-->
-<!--<a href="#">-->
-<!--<img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">-->
-<!--<div class="overly">-->
-<!--<div class="position-center">-->
-<!--<h2>Tesla Motors</h2>-->
-<!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
-
-<!--</div>-->
-<!--</div>-->
-<!--</a>-->
-<!--</li>-->
-<!--<li class="mix Graphic">-->
-<!--<a href="#">-->
-<!--<img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">-->
-<!--<div class="overly">-->
-<!--<div class="position-center">-->
-<!--<h2>Tesla Motors</h2>-->
-<!--<p>Labore et dolore magna aliqua. Ut enim ad </p>-->
-
-<!--</div>-->
-<!--</div>-->
-<!--</a>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</section>-->
 
 <!-- Clients Logo Section Start -->
 <section id="clients-logo-section">
     <div class="container">
         <div class="row">
+            <h4 style=" margin-bottom: 25px">We have a loot more finished and ongoing projects, but we think this is enuf to finish your whisky</h4>
             <div style="gravity:center"><h2>Partners and Customers</h2></div>
             <div class="col-md-12">
                 <div class="block">
